# tmuxedo

./: Cargo.toml  LICENSE  README.md
.github/workflows/: check-version-owner.yml  lint.yml  publish.yml  rust-tests.yml
src/: bindings.rs  cli.rs  main.rs  plugins.rs  register.rs  something.py  state.rs  tmux.rs  tmuxedo.rs  tpm.rs  utils.rs
src/tui/: input.rs  installed_list.rs  keymap.rs  list.rs  mod.rs  tabs.rs  ui_banner.rs  ui_keymap.rs  ui_search_box.rs
tests/: cli_tests.rs  utils_tests.rs
